--- a/style.css
+++ b/style.css
@@ -1,229 +1,197 @@
-body {
-    background: #e1e1ea;
-    font-family: 'Roboto';
-    margin: auto;
-    box-sizing: border-box;
-    padding: 10px;
-  }
-  /**Left side CSS**/
-  .left-box{
-    float: left;
-    box-shadow: 10px 10px 5px grey;
-    background-color: #b30000;
-    height: 961px;
-    width: 300px;
-    box-sizing: border-box;
-    margin: 15px 15px 15px 15px;
+*, *:before, *:after {
+    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+   }
+  
+  html
+  {
+      font-size:100%;
   }
   
-  /**Left side content CSS**/
-  .top-left{
-    position: relative;
-    border-style: solid;
-    border-width: 0px 0px 3px 0px;
-    box-sizing: border-box;
-    height: 25%;
-    margin: 0px;
+  body
+  {
+      -webkit-font-smoothing:antialiased;
+      color:#333332;
+      font-family:Lora, serif;
+      font-size:18px;
+      font-weight:400;
+      line-height:1.4;
+      text-rendering:optimizeLegibility;
   }
   
-  .name {
-      position: absolute;
-      font-size: 40px;
-      color: white;
-      bottom: 8px;
-      left: 16px;
-      box-sizing: border-box;
+  .skill-set li:hover
+  {
+      background:#3498db;
   }
   
-  img { 
-      width: 100%;
-      height: 100%;
-      box-sizing: border-box;
+  h1
+  {
+      color:rgba(0,0,0,.75);
   }
   
-  .objective {
-     border-style: solid;
-     border-width: 0px 0px 2px 0px ;
-     margin: 15px;
-     padding: 10px;
-     box-sizing: border-box;
+  .wrapper
+  {
+      height:100%;
   }
   
-  .objective-img{
-    float: left;
-    border: solid;
-    border-width: 3px;
-    box-sizing: border-box;
-    width: 30px;
-    height: auto;
+  .left
+  {
+      background-color:rgba(0,0,0,.025);
+      border-right:1px solid rgba(0,0,0,.05);
+      float:right;
+      height:100%;
+      margin-left:-1px;
+      min-width:256px;
+      position:fixed;
+      width:33.33%;
+    
   }
   
-  .objective-text{
-    display: inline-block;
-    text-align: left;
-    color: white;
-    box-sizing: border-box;
-    margin: 15px 15px 15px 15px;
-  }
-  
-  .phone{
-     border-style: solid;
-     border-width: 0px 0px 2px 0px;
-     box-sizing: border-box;
-     margin: 15px;
-     padding: 10px;
-  }
-  
-  .phone-text {
-    display: inline-block;
-    text-align: left;
-    font-size: 20px;
-    color: white;
-    margin: 15px 15px 15px 15px;
-    box-sizing: border-box;
-  }
-  
-  .email{
-     border-style: solid;
-     border-width: 0px 0px 0px 0px;
-     box-sizing: border-box;
-     margin: 15px;
-     padding: 10px;
-  }
-  
-  .email-text {
-    display: inline-block;
-    text-align: left;
-    font-size: 20px;
-    color: white;
-    margin: 15px 15px 15px 15px;
-    box-sizing: border-box;
-  }
-  /**work experience box**/
-  .work-experience {
-    float: left;
-    box-shadow: 10px 10px 5px grey;
-    background-color: white;
-    height: 300px;
-    width: 850px;
-    margin: 15px 15px 15px 15px;
-    box-sizing: border-box;
-  }
-  
-  .work-img {
-    float: left;
-    background-color: #b30000;
-    height: auto;
-    width: 50px;
-    margin: 25px 30px 100% 30px;
-    box-sizing: border-box;
-  }
-  
-  .job-box{
-    float: left;
-    border: solid;
-    border-width: 0px 0px 3px 0px;
-    box-sizing: border-box;
-    margin: 0px 10px 0px 0px;
-    padding: 10px 10px 10px 10px;
-    width: 200px;
-    height: auto;
-  }
-  
-  .job-box:hover {
-    background-color: gray;
-  }
-  
-  .job-title {
-    font-weight: bold;
-    line-height: 1.5;
-    box-sizing: border-box;
-  }
-  
-  .job-date{
-    color: #b30000;
-    line-height: 1.5;
-    box-sizing: border-box;
+  .right
+  {
+      float:right;
+      height:100%;
+      position:relative;
+      width:66.66%;
   }
   
   
-  .job-description{
-    line-height: 1.5;
-    box-sizing: border-box;
+  .name-hero
+  {
+      background:rgba(0,0,0,.001);
+      bottom:0;
+      height:290px;
+      left:0;
+      margin:auto;
+      position:absolute;
+      right:0;
+      top:0;
+      width:85%;
   }
   
-  /**Education box**/
-  .education {
-    float: left;
-    box-shadow: 10px 10px 5px grey;
-    background-color: white;
-    box-sizing: border-box;
-    height: 300px;
-    width: 850px;
-    margin: 15px 15px 15px 15px;
+  .me-img
+  {
+      background:url(https://media-exp1.licdn.com/dms/image/C4E03AQGnLq_IB_mf8Q/profile-displayphoto-shrink_400_400/0/1631022739752?e=1648684800&v=beta&t=eICUjHeH_g9GQEItmEMK1j2gCADwqfjrlccSD_5za58) no-repeat center center ;
+      background-size:100%;
+    background-position:0px;
+      border-radius:100%;
+      height:150px;
+      margin:0 auto;
+      position:relative;
+      width:150px;
   }
   
-  /**interest box**/
-  .interest {
-    float: left;
-    box-shadow: 10px 10px 5px grey;
-    background-color: white;
-    box-sizing: border-box;
-    height: 300px;
-    width: 410px;
-    margin: 15px 15px 15px 15px;
+  .name-hero h1
+  {
+      font-family:Open Sans, sans-serif;
+      font-size:1.5em;
+      text-align:center;
   }
   
-  /**Skills box**/
-  .skills {
-    float: left;
-    box-shadow: 10px 10px 5px grey;
-    background-color: white;
-    box-sizing: border-box;
-    height: 300px;
-    width: 410px;
-    margin: 15px 15px 15px 15px;
+  .name-hero h1 em
+  {
+      color:rgba(0,0,0,.3);
+      font-style:normal;
+      font-weight:700;
   }
   
-   
-    list-style-type none
-  
-  
-  ul {
-    list-style: none;
-    margin: 10px 20px 20px 45px;
+  .name-hero p
+  {
+      color:rgba(0,0,0,.75);
+      font-size:.75em;
+      line-height:1.5;
+      margin:0 8px 0 0;
+      text-align:center;
   }
   
-  li.l1 {
-    border: solid;
-    border-width: 1px;
-    background-color: #b30000;
-    margin: 10px 110px 10px 0px;
+  .name-hero .name-text
+  {
+      margin:0 auto;
+      width:85%;
   }
   
-  li.l2 {
-    border: solid;
-    border-width: 1px;
-    background-color: #b30000;
-    margin: 10px 130px 10px 0px;
+  .inner
+  {
+      margin:0 auto;
+      max-width:975px;
+      padding:3em;
   }
   
-  li.l3 {
-    border: solid;
-    border-width: 1px;
-    background-color: #b30000;
-    margin: 10px 0px 10px 0px;
+  .inner h1
+  {
+      font-size:1.75em;
   }
   
-  li.l4 {
-    border: solid;
-    border-width: 1px;
-    background-color: #b30000;
-    margin: 10px 90px 10px 0px;
-    padding: 0px 101px 0px 0px;
+  .inner p
+  {
+      color:rgba(0,0,0,.5);
   }
   
+  .inner p em
+  {
+      color:rgba(0,0,0,1);
+      font-style:normal;
+  }
   
+  .inner section
+  {
+      margin:100px auto;
+  }
   
+  ul
+  {
+      list-style-type:none;
+      margin-top:-10px;
+      max-width:570px;
+      padding:0;
+  }
   
+  .skill-set li
+  {
+      background:rgba(0,0,0,.75);
+      border-radius:5px;
+      color:#FFF;
+      display:inline-block;
+      list-style:none;
+      margin:15px 15px 0 0;
+      padding:10px;
+      text-align:justify;
+  }
   
+  @media screen and (max-width: 48em) {
+      .right,.left
+      {
+          float:none;
+      position:relative !important;
+          width:100%;
+      min-height:500px;
+      }
+    .handmade {
+    text-align:center !important;
+    margin-top:0px !important;
+  }
+  
+  @media screen and (max-width: 75em) {
+      body
+  { font-size:16px;}
+  }
+  
+  @media screen and (max-width: 60em) {
+      body
+  { font-size:14px;}
+  }
+  .clearfix:after {
+     content: " "; /* Older browser do not support empty content */
+     visibility: hidden;
+     display: block;
+     height: 0;
+     clear: both;
+  }
+  .handmade {
+    text-align:right;
+    margin-top:100px;
+  }
+  .handmade em {
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 1.25em;
+    margin-left:5px;
+  }
